Fixed contact button and aligned with global styles. Added contact to "my process"

--- a/css/style.css
+++ b/css/style.css
@@ -132,27 +132,6 @@ a .recent_cta span {
   font-weight: 700;
 }
 
-/* The hero image */
-.hero-image {
-  background-image: url("../img/bg_hero_about.jpg");
-  min-height: 40vh;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
 .section-wrapper {
   background: #F8F9FA;
 }
@@ -186,7 +165,10 @@ section h1 {
   margin: 0 auto 40px;
 }
 
-a.button {
+a.button, button.button {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 800;
   display: inline-block;
   border-radius: 6px;
   padding: 16px 32px;
@@ -201,24 +183,25 @@ a.button {
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.2);
   margin: 0 8px 8px 0;
+  border: transparent;
 }
-a.button .button-arrow {
+a.button .button-arrow, button.button .button-arrow {
   display: inline-block;
   margin-left: 8px;
   transition: margin 0.3s ease;
 }
-a.button .button-arrow button-arrow-svg.svg {
+a.button .button-arrow button-arrow-svg.svg, button.button .button-arrow button-arrow-svg.svg {
   max-width: 100%;
 }
-a.button .button-arrow button-arrow-svg.svg path {
+a.button .button-arrow button-arrow-svg.svg path, button.button .button-arrow button-arrow-svg.svg path {
   fill: white;
 }
-a.button.tertiary {
+a.button.tertiary, button.button.tertiary {
   background: #203D55;
   color: white;
 }
 @media screen and (min-width: 1280px) {
-  a.button:hover {
+  a.button:hover, button.button:hover {
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15), 0 8px 10px -6px rgba(0, 0, 0, 0.3);
     transform: translateY(-1px);
   }
@@ -1832,11 +1815,6 @@ section.get_contact .container {
   max-width: 800px;
 }
 
-#contact input[type=text], #contact input[type=email], #contact input[type=url], #contact textarea, #contact button[type=submit] {
-  font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
-  border-radius: 8px;
-}
-
 fieldset {
   border: medium none !important;
   margin: 0 0 16px;
@@ -1845,7 +1823,11 @@ fieldset {
   width: 100%;
 }
 
-#contact input[type=text], #contact input[type=email], #contact input[type=tel], #contact input[type=url], #contact textarea {
+#contact input[type=text],
+#contact input[type=email],
+#contact input[type=tel],
+#contact input[type=url],
+#contact textarea {
   border: 4px solid transparent;
   background: #E1E7EC;
   margin: 0 0 5px;
@@ -1858,7 +1840,11 @@ fieldset {
   width: calc(100% - 32px);
 }
 
-#contact input[type=text]:hover, #contact input[type=email]:hover, #contact input[type=tel]:hover, #contact input[type=url]:hover, #contact textarea:hover {
+#contact input[type=text]:hover,
+#contact input[type=email]:hover,
+#contact input[type=tel]:hover,
+#contact input[type=url]:hover,
+#contact textarea:hover {
   -webkit-transition: border-color 0.3s ease-in-out;
   -moz-transition: border-color 0.3s ease-in-out;
   transition: border-color 0.3s ease-in-out;
@@ -1871,22 +1857,8 @@ fieldset {
   resize: none;
 }
 
-#contact button[type=submit] {
-  margin: 16px 0 0 0;
-  padding: 16px;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 800;
-  transition: all 150ms ease-out;
-}
-
-#contact button[type=submit]:hover {
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-
-#contact input:focus, #contact textarea:focus {
+#contact input:focus,
+#contact textarea:focus {
   outline: 0;
   border: 4px solid #ABD4F5;
 }
