--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,5 +1,3 @@
-
-
 @import 'variables';
 
 
@@ -8,9 +6,10 @@
 
 
 section.get_contact {
-  position:relative;
+  position: relative;
   background: $neutral-10;
   margin-top: 32px;
+
   &::before {
     content: "";
     position: absolute;
@@ -28,77 +27,92 @@ section.get_contact {
   }
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { 
-  font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; 
-  border-radius: 8px;
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  // font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; 
+  // border-radius: 8px;
 }
 
 fieldset {
-	border: medium none !important;
-	margin: 0 0 16px;
-	min-width: 100%;
-	padding: 0;
-	width: 100%;
+  border: medium none !important;
+  margin: 0 0 16px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	border:4px solid transparent;
-	background: $neutral-20;
-	margin:0 0 5px;
-	padding:16px;
-	font-size: 16px;
-	color: $neutral-70;
-	font-weight: 600;
-	width: -webkit-calc(100% - 32px);
-    width:    -moz-calc(100% - 32px);
-    width:         calc(100% - 32px);
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  border: 4px solid transparent;
+  background: $neutral-20;
+  margin: 0 0 5px;
+  padding: 16px;
+  font-size: 16px;
+  color: $neutral-70;
+  font-weight: 600;
+  width: -webkit-calc(100% - 32px);
+  width: -moz-calc(100% - 32px);
+  width: calc(100% - 32px);
 }
 
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border: 4px solid #ABD4F5;
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 4px solid #ABD4F5;
 }
 
 #contact textarea {
-	height:100px;
-	max-width:100%;
-  	resize:none;
+  height: 100px;
+  max-width: 100%;
+  resize: none;
 }
 
 #contact button[type="submit"] {
-	margin: 16px 0 0 0;
-    padding: 16px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 800;
-    transition: all 150ms ease-out;
+  // margin: 16px 0 0 0;
+  //    padding: 16px;
+  //    font-family: "Open Sans", sans-serif;
+  //    font-size: 16px;
+  //    font-weight: 800;
+  //    transition: all 150ms ease-out;
 }
 
 #contact button[type="submit"]:hover {
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
+  //  -webkit-transition:background 0.3s ease-in-out;
+  //  -moz-transition:background 0.3s ease-in-out;
+  //  transition:background-color 0.3s ease-in-out;
 }
 
 // #contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
-#contact input:focus, #contact textarea:focus {
-	outline:0;
-	border:4px solid #ABD4F5;
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 4px solid #ABD4F5;
 }
+
 ::-webkit-input-placeholder {
- color:$neutral-50;
+  color: $neutral-50;
 }
+
 :-moz-placeholder {
- color:$neutral-40;
+  color: $neutral-40;
 }
+
 ::-moz-placeholder {
- color:$neutral-40;
+  color: $neutral-40;
 }
+
 :-ms-input-placeholder {
- color:$neutral-40;
+  color: $neutral-40;
 }
-
-
