--- a/scss/global.scss
+++ b/scss/global.scss
@@ -132,26 +132,6 @@
 // }
 
 
- /* The hero image */
- .hero-image {
-   background-image: url("../img/bg_hero_about.jpg");
-   min-height: 40vh;
-   width: 100%;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   position: relative;
- }
-
- /* Place text in the middle of the image */
- .hero-text {
-   text-align: center;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   color: white;
- }
 
 
  // Section styles
@@ -190,21 +170,26 @@
 
  // Button styles
 
- a.button {
-   display: inline-block;
-   border-radius: 6px;
-   padding: $unit*4 $unit*8;
-   text-align: center;
-   text-decoration: none;
-   background: #3B73FF;
-   color: white;
-   font-family: $family;
-   font-size: $unit*4;
-   font-weight: $semibold;
-   transition: all 150ms ease-out;
-   cursor: pointer;
-   box-shadow: 0 2px 4px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.2);
-   margin: 0 $unit*2 $unit*2 0;
+  a.button, button.button {
+
+    font-family: $family;
+    font-size: 16px;
+    font-weight: 800;
+    display: inline-block;
+    border-radius: 6px;
+    padding: $unit*4 $unit*8;
+    text-align: center;
+    text-decoration: none;
+    background: #3B73FF;
+    color: white;
+    font-family: $family;
+    font-size: $unit*4;
+    font-weight: $semibold;
+    transition: all 150ms ease-out;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.2);
+    margin: 0 $unit*2 $unit*2 0;
+    border: transparent;
 
    .button-arrow {
           display: inline-block;
